--- a/index.css
+++ b/index.css
@@ -22,12 +22,18 @@ a:hover {
   color: #535bf2;
 }
 
+
 body {
   margin: 0;
   display: flex;
-  place-items: center;
-  min-width: 320px;
+  justify-content: center;
+  align-items: center;
   min-height: 100vh;
+}
+
+
+.centered-container {
+  text-align: center;
 }
 
 h1 {
